--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome Page</title>
+  <title>Howdy Yall!</title>
 </head>
 <body>
-  <h1>Welcome!</h1>
+  <h1>Hello!</h1>
 </body>
 </html>
