--- a/index.html
+++ b/index.html
@@ -1,37 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
+    <title>Drag N Drive Vehicles</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+            color: white;
+            padding: 14px 16px;
+        }
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            padding: 14px 16px;
+            float: left;
+        }
+        .hero {
+            width: 100%;
+            height: 400px;
+            background-image: url('hero.jpg');
+            background-size: cover;
+            text-align: center;
+            padding-top: 100px;
+            color: white;
+        }
+        .car-section {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+        }
+        .car-card {
+            width: 200px;
+            margin: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 10px;
+        }
+        .car-card img {
+            width: 100%;
+        }
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
+    <div class="navbar">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </div>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
-  </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">35 days left</p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-  </div>
-</div>
+    <div class="hero">
+        <h1>Welcome to Drag N Drive Vehicles</h1>
+        <p>Experience the thrill of drag racing with our top-notch vehicles.</p>
+    </div>
 
+    <div class="car-section">
+        <!-- Repeat this section for each car -->
+        <div class="car-card">
+            <img src="car.jpg" alt="Car Image">
+            <h2>Car Name</h2>
+            <p>Car Description</p>
+        </div>
+        <!-- End of car card -->
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2023 Drag N Drive Vehicles. All rights reserved.</p>
+    </div>
 </body>
 </html>
+
