--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="car-section">
         <!-- Repeat this section for each car -->
         <div class="car-card">
-            <img src="car.jpg" alt="Car Image">
+            <img src="https://images.pexels.com/photos/10910053/pexels-photo-10910053.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Car Image">
             <h2>Car Name</h2>
             <p>Car Description</p>
         </div>
