--- a/index.html
+++ b/index.html
@@ -1,81 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Drag N Drive Vehicles</title>
+    <title>Superspygitl99999</title>
     <style>
         body {
             font-family: Arial, sans-serif;
         }
-        .navbar {
-            background-color: #333;
-            overflow: hidden;
-            color: white;
-            padding: 14px 16px;
+        .header {
+            background-color: #f8f9fa;
+            text-align: center;
+            padding: 20px;
         }
-        .navbar a {
-            color: white;
+        .nav {
+            margin: 20px 0;
+            text-align: center;
+        }
+        .nav a {
+            margin: 0 15px;
             text-decoration: none;
-            padding: 14px 16px;
-            float: left;
+            color: #333;
         }
-        .hero {
-            width: 100%;
-            height: 400px;
-            background-image: url('hero.jpg');
-            background-size: cover;
-            text-align: center;
-            padding-top: 100px;
-            color: white;
-        }
-        .car-section {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 20px;
-        }
-        .car-card {
-            width: 200px;
-            margin: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 10px;
-        }
-        .car-card img {
-            width: 100%;
-        }
-        .footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 20px;
+        .content {
+            margin: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="navbar">
+    <div class="header">
+        <img src="YourLogo.png" alt="Logo" width="100">
+        <h1>Welcome to Brookhaven Roblox Community</h1>
+    </div>
+    <div class="nav">
         <a href="#">Home</a>
         <a href="#">About</a>
+        <a href="#">Guides</a>
+        <a href="#">Community</a>
         <a href="#">Contact</a>
     </div>
-
-    <div class="hero">
-        <h1>Welcome to Drag N Drive Vehicles</h1>
-        <p>Experience the thrill of drag racing with our top-notch vehicles.</p>
-    </div>
-
-    <div class="car-section">
-        <!-- Repeat this section for each car -->
-        <div class="car-card">
-            <img src="https://images.pexels.com/photos/10910053/pexels-photo-10910053.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Car Image">
-            <h2>Car Name</h2>
-            <p>Car Description</p>
-        </div>
-        <!-- End of car card -->
-    </div>
-
-    <div class="footer">
-        <p>&copy; 2023 Drag N Drive Vehicles. All rights reserved.</p>
+    <div class="content">
+        <h2>About Brookhaven</h2>
+        <p>Brookhaven is a popular Roblox game where you can create your own virtual life. Here you will find guides, tips, and the latest news about Brookhaven.</p>
     </div>
 </body>
 </html>
-
