--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="YourLogo.png" alt="Logo" width="100">
+        <img src="https://tr.rbxcdn.com/9703079ee90115945ac81ba4b43eac52/768/432/Image/Png" alt="Logo" width="100">
         <h1>Welcome to Brookhaven Roblox Community</h1>
     </div>
     <div class="nav">
