--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="header">
         <img src="https://tr.rbxcdn.com/9703079ee90115945ac81ba4b43eac52/768/432/Image/Png" alt="Logo" width="100">
-        <h1>Welcome to Brookhaven Roblox Community</h1>
+        <h1>Welcome to Sophia World</h1>
     </div>
     <div class="nav">
         <a href="#">Home</a>
