--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@ body, html {
 <!-- Designers Section -->
 <div class="w3-container" style="padding:128px 16px" id="designers">
   <h3 class="w3-center">OUR DESIGNERS</h3>
+  
   <p class="w3-center w3-large">Meet the creative minds behind our collections</p>
   <!-- Add your designers here -->
 </div>
+  <h4>Meet Sophia </h4>
+  
 
 <!-- Shop Section -->
 <div class="w3-container" style="padding:128px 16px" id="shop">
